; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/security/smack/extr_smack_lsm.c_smack_task_to_inode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/security/smack/extr_smack_lsm.c_smack_task_to_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }
%struct.inode = type { %struct.inode_smack* }
%struct.inode_smack = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.task_struct*, %struct.inode*)* @smack_task_to_inode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @smack_task_to_inode(%struct.task_struct* %0, %struct.inode* %1) #0 {
  %3 = alloca %struct.task_struct*, align 8
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.inode_smack*, align 8
  store %struct.task_struct* %0, %struct.task_struct** %3, align 8
  store %struct.inode* %1, %struct.inode** %4, align 8
  %6 = load %struct.inode*, %struct.inode** %4, align 8
  %7 = getelementptr inbounds %struct.inode, %struct.inode* %6, i32 0, i32 0
  %8 = load %struct.inode_smack*, %struct.inode_smack** %7, align 8
  store %struct.inode_smack* %8, %struct.inode_smack** %5, align 8
  %9 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %10 = call i32 @task_security(%struct.task_struct* %9)
  %11 = load %struct.inode_smack*, %struct.inode_smack** %5, align 8
  %12 = getelementptr inbounds %struct.inode_smack, %struct.inode_smack* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  ret void
}

declare dso_local i32 @task_security(%struct.task_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
